--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./popgame.css">
-    <title>popgame</title>
+    <link rel='icon' type='images/png' href='https://blog.kakaocdn.net/dn/c4uU2q/btrFGAu2cps/kb5I6v8NAYP6plYAW8oJkk/img.png'>
+    <title>pop cat</title>
 </head>
 <body>
-    <img class="cat1" src=""
+    <h1 class="score">0</h1>
+    <img class="cat1" src="https://i.pinimg.com/564x/59/66/e4/5966e423d5d0c628f8044cd7874755b5.jpg" onclick="changeCat(this)">
+    <img class="cat2" src="https://i.pinimg.com/564x/b4/5f/6a/b45f6a22a04be2f1022ff81808590cc2.jpg">
     
+    <script src="./index.js"></script>
 </body>
 </html>
