--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./popgame.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel='icon' type='images/png' href='https://blog.kakaocdn.net/dn/c4uU2q/btrFGAu2cps/kb5I6v8NAYP6plYAW8oJkk/img.png'>
-    <title>pop cat</title>
+    <title>POP CAT</title>
 </head>
 <body>
-    <h1 class="score">0</h1>
-    <img class="cat1" src="https://i.pinimg.com/564x/59/66/e4/5966e423d5d0c628f8044cd7874755b5.jpg">
+    <div id="popcat">
+        <h1 class="score">0</h1>
+        <img class="cat1" src="https://i.pinimg.com/564x/59/66/e4/5966e423d5d0c628f8044cd7874755b5.jpg">
+    </div>
     
     <script src="./index.js"></script>
 </body>
