ADD :: 100증가할때 보너스 사진><

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="popcat">
         <h1 class="score">0</h1>
-        <img class="cat1" src="https://i.pinimg.com/564x/59/66/e4/5966e423d5d0c628f8044cd7874755b5.jpg">
+        <img class="cat1" src="./cat1.png">
     </div>
     
     <script src="./index.js"></script>
