--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div id="popcat">
-        <h1 class="score">0</h1>
+        <div id="center">
+            <h1 class="score">0</h1>
+            <img class="reset" src="./image-removebg-preview.png">
+        </div>
         <img class="cat1" src="./cat1.png">
     </div>
     
